Switch from KMS to Secret Manager to avoid GitGuardian emails

--- a/infrastructure/gcp/setup/Pulumi.dev-for-mg.yaml
+++ b/infrastructure/gcp/setup/Pulumi.dev-for-mg.yaml
@@ -4,3 +4,5 @@ config:
   gcp:project: nifty-bindery-242115
   gcp:region: europe-west1
   gcp:zone: b
+  restaurant-technology-landscape-setup:access-token:
+    secure: v1:Dnoer1RfBUrhCWao:QMCEVBh0l594Y0O9mcS5z4hpB+Y8lxtDeRumITo18U4eotG6GZW8SD+vcsIz4+yMq8WzO35C1XR5QFl7
