Move the location of accessing secret data

--- a/infrastructure/gcp/setup/Pulumi.dev-for-mg.yaml
+++ b/infrastructure/gcp/setup/Pulumi.dev-for-mg.yaml
@@ -5,4 +5,4 @@ config:
   gcp:region: europe-west1
   gcp:zone: b
   restaurant-technology-landscape-setup:access-token:
-    secure: v1:Dnoer1RfBUrhCWao:QMCEVBh0l594Y0O9mcS5z4hpB+Y8lxtDeRumITo18U4eotG6GZW8SD+vcsIz4+yMq8WzO35C1XR5QFl7
+    secure: v1:FUKUFCcbomRXiP9Y:92VrX+8gmsF5/JPrhjr2itKwzHKSmCdlOd4bIAEoHHrhWw0JCqYqmmBa9pun9nT8h7DTSHrSPEhts0Zp
