--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rt-temp",
+  "name": "restaurant-technology-landscape",
   "private": true,
   "scripts": {
     "build": "gridsome build",
